# NewRelicGoPythonRustExample

./: README.md
NewRelicExample/: .env.example  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
NewRelicExample/logs/: logs.go
NewRelicExample/tests/: p95example.k6.js
NewRelicExample/thunder-tests/: thunderActivity.json
new-relic-example/: .gitignore  README.md  main.py
new-relic-example/thunder-tests/: thunderActivity.json  thunderCollection.json  thunderEnvironment.json  thunderclient.json
rocket-example/: Cargo.toml  Rocket.toml
rocket-example/src/: main.rs
rocket-example/thunder-tests/: thunderActivity.json  thunderCollection.json  thunderEnvironment.json  thunderclient.json
